[project]
name = "timeweb-sdk"
version = "0.1.0.dev0"
description = "Python SDK for Timeweb Cloud API"
authors = [
    { name = "vlaszdunov", email = "zdunovvl@gmail.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx (>=0.28.1,<0.29.0)",
    "pydantic (>=2.11.1,<3.0.0)",
    "annotated-types (>=0.7.0,<0.8.0)"
]

[project.urls]
Repository = "https://github.com/vlaszdunov/timeweb-sdk"
"Bug Tracker" = "https://github.com/vlaszdunov/timeweb-sdk/issues"

[tool.poetry]
packages = [{ include = "timeweb_sdk", from = "src" }]
requires-poetry = ">=2.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.10"
pytest = "^8.3.5"
respx = "^0.22.0"
pytest-cov = "^6.1.0"

[tool.ruff]
indent-width = 4
line-length = 120
namespace-packages = ["src/timeweb_sdk"]
output-format = "grouped"
src = ["src"]
target-version = "py313"

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = "dynamic"
indent-style = "space"
line-ending = "auto"
skip-magic-trailing-comma = false

[tool.ruff.lint]
ignore=["F403","F405"]

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = ["tests"]
addopts = ["--cov=timeweb_sdk", "--cov-report=xml"]
required_plugins = ["pytest-cov"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
